# autoconf-archive

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .prev-version  .travis.yml  .yamllint.yml  AUTHORS  ChangeLog  GNUmakefile  Makefile-maint  Makefile.am  NEWS  NOTES  README  README-maint  README.md  SConstruct  TODO  _ac_c_ifdef.m4  _ac_latex_test.m4  _acltx_test.m4  ac_arg_with_path_style.m4  ac_as_dirname.m4  ac_as_mkdir_p.m4  ac_auto_include_headers.m4  ac_c_bigendian_cross.m4  ac_c_long_long.m4  ac_c_long_long_.m4  ac_c_printf_thsep.m4  ac_c_var_func.m4  ac_caolan_check_package.m4  ac_caolan_func_which_gethostbyname_r.m4  ac_caolan_search_package.m4  ac_check_cc_opt.m4  ac_check_class.m4  ac_check_classpath.m4  ac_check_curl.m4  ac_check_docbook_dtd.m4  ac_check_docbook_xslt.m4  (+527 more)
.github/workflows/: autoconf-archive.yml
doc/: .gitignore  Makefile.am  autoconf-archive.texi  contribute.texi  downloads.texi  introduction.texi  using.texi
m4/: _ac_c_ifdef.m4  _acltx_test.m4  _ax_c_ifdef.m4  ac_arg_with_path_style.m4  ac_as_dirname.m4  ac_auto_include_headers.m4  ac_c_bigendian_cross.m4  ac_c_long_long.m4  ac_c_printf_thsep.m4  ac_c_var_func.m4  ac_caolan_check_package.m4  ac_caolan_func_which_gethostbyname_r.m4  ac_caolan_search_package.m4  ac_check_class.m4  ac_check_classpath.m4  ac_check_curl.m4  ac_check_docbook_dtd.m4  ac_check_docbook_xslt.m4  ac_check_docbook_xslt_min.m4  ac_check_func_in.m4  ac_check_icu.m4  ac_check_java_home.m4  ac_check_junit.m4  ac_check_mysql_db.m4  ac_check_mysqlr.m4  ac_check_rqrd_class.m4  ac_check_struct_for.m4  ac_check_symbol.m4  ac_check_taglib.m4  ac_check_typedef.m4  ac_check_user.m4  ac_compile_check_sizeof.m4  ac_compile_warnings.m4  ac_cond_with_level.m4  ac_config_libconfig_in.m4  ac_config_pkgconfig_in.m4  ac_create_generic_config.m4  ac_create_prefix_config_h.m4  ac_create_target_h.m4  ac_cxx_bool.m4  (+999 more)
test/: .gitignore  Makefile.am  atlocal.in  configure.ac.in
